doc: get profile
