# spec/api.yaml
@@ -86,6 +86,22 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /user/me:
+    parameters:
+      - $ref: "#/components/parameters/AuthToken"
+    get:
+      tags:
+        - user
+      responses:
+        200:
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+
+
+
 
 
 
