# src/routes/user.routes.ts
@@ -1,0 +1,7 @@
+import express from "express";
+
+const userRoutes = express.Router();
+
+userRoutes.get("/me");
+
+export default userRoutes;
